# Paddle-Lite

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Help for Mac.md  Help-for-Mac.md  Home.md  LICENSE  README.md  README_cn.md  README_en.md  _config.yml  aarch64.cmake  about.md  add_new_operation.md  architecture-intro.md  architecture.md  benchmark.md  benchmark_tools.md  benchmark_tools.md.toc.2019-08-25_233116  benchmark_tools.md.toc.2019-08-25_233528  build.bat  build.sh  compile_commands.json  config.txt  cpp_demo.md  cxx_api.md  debug_tools.md  demos.md.toc.2019-08-26_222115  demos.md.toc.2019-08-26_222307  fluid_point.txt  for-developer.md  fpga.md  (+29 more)
fluid/: .clang-format  CMakeCache.txt  CMakeLists.txt  README.md  build.sh  cmake_install.cmake  paddle-mobile.cbp
fluid/src/: io.cc  io.cpp  io.h
fluid/test/: main.cc  main.cpp  test_helper.h
lite/: CMakeLists.txt
lite/api/: CMakeLists.txt  EfficientNet_b0_test.cc  _paddle_use_kernels.h  _paddle_use_ops.h  apis_test.cc  benchmark.cc  compute_api.cc  compute_api.h  compute_param.cc  compute_param.h  compute_utils.cc  compute_utils.h  cxx_api.cc  cxx_api.h  cxx_api_bin.cc  cxx_api_bin_int8.cc  cxx_api_impl.cc  cxx_api_test.cc  detection_model_test.cc  efficientnet_b0_test.cc  fast_rcnn_test.cc  faster_rcnn_test.cc  googlenet_test.cc  inceptionv3_test_fpga.cc  inceptionv4_test.cc  light_api.cc  light_api.h  light_api_impl.cc  light_api_mem_leak.cc  light_api_shared.cc  light_api_test.cc  lite_api_test_helper.cc  lite_api_test_helper.h  lite_multithread_test.cc  log_lite.h  mnasnet_test.cc  mobile_model_test.cc  mobilenetv1_int16_test.cc  mobilenetv1_int8_test.cc  mobilenetv1_opt_quant_test.cc  (+49 more)
lite/backends/: CMakeLists.txt
lite/core/: CMakeLists.txt  compatible_tensor.cc  compatible_tensor.h  context.cc  context.h  context_test.cc  cpu_info.cc  cpu_info.h  device_info.cc  device_info.h  dim.cc  dim.h  exported_symbols.lds  framework.proto  hvy_tensor.cc  hvy_tensor.h  int_array.h  int_array_test.cc  kernel.cc  kernel.h  kernel_test.cc  kernel_version.h  lite.map  lite_tensor.cc  lite_tensor.h  lite_tensor_test.cc  memory.cc  memory.h  memory_test.cc  op_lite.cc  op_lite.h  op_lite_test.cc  op_registry.cc  op_registry.h  optimizer.cc  optimizer.h  optimizer_test.cc  parallel_defines.h  program.cc  program.h  (+32 more)
lite/cuda/: CMakeLists.txt  blas.cc  cuda_utils.h  target_wrapper.cc  target_wrapper.h
lite/fluid/: CMakeLists.txt  data_type.cc  data_type.h  eigen.h  float16.h  for_range.h  lod.h  rw_lock.h  selected_rows.cc  selected_rows.h  transform.h
lite/fpga/: CMakeLists.txt  lite_tensor.cc  lite_tensor.h  target_wrapper.cc
lite/gen_code/: CMakeLists.txt  gen_code.cc  gen_code.h  gen_code_test.cc  generated_code_test.cc  paddle_code_generator.cc  paddle_infer.cc  paddle_infer.h
lite/host/: CMakeLists.txt
lite/kernels/: CMakeLists.txt
lite/model_parser/: CMakeLists.txt  compatibility.cc  compatibility.h  compatibility_test.cc  compatible_pb.cc  compatible_pb.h  compatible_pb_test.cc  cpp_desc.h  desc_apis.h  immediate.cc  immediate.h  model_parser.cc  model_parser.h  model_parser_test.cc  op_desc_test.cc  runtime.cc  runtime.h  tensor_io.cc  tensor_io.h
lite/npu/: CMakeLists.txt  npu_helper.cc  npu_helper.h
lite/opencl/: CMakeLists.txt  cl_caller.cc  cl_caller.h  cl_context.cc  cl_context.h  cl_functions_test.cc  cl_im2col_test.cc  cl_image.cc  cl_image.h  cl_image_converter.cc  cl_image_converter.h  cl_runtime.cc  cl_runtime.h  cl_utility.cc  cl_utility.h  cl_wrapper.cc  cl_wrapper.cxx  cl_wrapper.h  target_wrapper.cc  target_wrapper.h
lite/operators/: CMakeLists.txt  __custom__yolo_box_3d_op.cc  __custom__yolo_box_3d_op.h  __custom__yolo_det_op.cc  __custom__yolo_det_op.h  __fpga__conv_op.cc  __fpga__conv_op.h  __xpu__bigru_op.cc  __xpu__bigru_op.h  __xpu__block_fuse_op.cc  __xpu__block_fuse_op.h  __xpu__clip_lod_op.cc  __xpu__clip_lod_op.h  __xpu__clip_mask_op.cc  __xpu__clip_mask_op.h  __xpu__conv2d_op.cc  __xpu__conv2d_op.h  __xpu__conv_pixel_shuffle_fuse_op.cc  __xpu__conv_pixel_shuffle_fuse_op.h  __xpu__dynamic_lstm_fuse_op.cc  __xpu__dynamic_lstm_fuse_op.h  __xpu__embedding_with_eltwise_add_op.cc  __xpu__embedding_with_eltwise_add_op.h  __xpu__embedding_with_ewadd_op.cc  __xpu__embedding_with_ewadd_op.h  __xpu__encoder_op.cc  __xpu__encoder_op.h  __xpu__fc_op.cc  __xpu__fc_op.h  __xpu__geglu_op.cc  __xpu__geglu_op.h  __xpu__generate_sequence_op.cc  __xpu__generate_sequence_op.h  __xpu__gn_silu_op.cc  __xpu__gn_silu_op.h  __xpu__greater_than_filter_op.cc  __xpu__greater_than_filter_op.h  __xpu__logit_op.cc  __xpu__logit_op.h  __xpu__mask_adaptive_op.cc  (+549 more)
lite/run_model_py/: accur_fluid.py  feed_ones.py  run_init.sh  run_model.sh  run_push.sh
lite/tests/: CMakeLists.txt  README.md
lite/tools/: CMakeLists.txt  Dockerfile.gcc82-cuda10.1-cudnn7  Dockerfile.mobile  android_change_namespace.sh  auto_transform.sh  basicfuncs  benchmark.sh  build.bat  build.sh  build_android.sh  build_android_arm_opencl_by_models.sh  build_android_by_models.sh  build_android_by_models_change_namespace.sh  build_android_opencl_by_models.sh  build_apu.sh  build_arm.sh  build_arm_linux_by_model.sh  build_armlinux.sh  build_armmacos.sh  build_bm.sh  build_fpga.sh  build_hw_ascend_npu.sh  build_intel_fpga.sh  build_ios.sh  build_ios_armv7_arm64.sh  build_linux.sh  (+30 more)
mobile/: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
pscore/: CMakeLists.txt  README.md
qualcomm_qnn/: CMakeLists.txt  dependencies.cmake  engine.cc  engine.h  utility.cc  utility.h
test/: CMakeLists.txt  elementwise_add_op_test.h  executor_for_test.h  main.cpp  mul_op_test.h  test_helper.h  test_include.h
tools/: CMakeLists.txt  build.sh  caffe.pb.cc  caffe.pb.h  caffe2mdl.cpp  ci_build.sh  ci_run_test.sh  docker_build_fpga.sh  op.cmake  op_stat.py  prepare_images_and_models.sh  profile_show.sh  push2android.sh  run.sh  run_on_android.sh
(+12970 files in other folders)
